# rust-wasm-template

./: README.md  index.html  package.json  server.js  webpack.config.js
js/: index.js
rust/: Cargo.toml
rust/src/: lib.rs
static/: README.md
