[package]
authors = ["Kevin Hernandez-Rives <rurunosep@gmail.com>"]
edition = "2018"
name = "rust-wasm-template"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "^0.1.5"
js-sys = "^0.3.46"
wasm-bindgen = "^0.2.69"
wee_alloc = "^0.4.5"

[dependencies.web-sys]
features = [
  "console",
]
version = "^0.3.46"
